--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -20,6 +20,11 @@
 	padding-top: 2vh;
 	padding-bottom: 2vh;
 	border-bottom: 1px solid @colour-01;
+	
+	.charity-logo {
+		height: 64px;
+		width: auto;
+	}
 }
 
 .FeaturedSidebar.affix-top {
@@ -32,10 +37,7 @@
 	top: 4vh;
 }
 
-.charity-logo {
-	height: 64px;
-	width: auto;
-}
+
 
 
 
@@ -94,4 +96,11 @@
 	outline: 0;
 	height: 8vh !important;
 	font-size: 150% !important;
+}
+
+.field-clear-button {
+	position: absolute;
+	right: 60px;
+	z-index: 10;
+	font-size: 150%;
 }
