--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -17,3 +17,17 @@
 @SogiveBrandYellow: #f60;
 
 @navbarcolour: @SogiveBrandYellow;
+
+@why-tags: #DF9232;
+@why-tags-fade: #D2B387;
+@where-tags: #FACD6B;
+@where-tags-fade: #E6D49D;
+
+@donation-amt-bg: #FBCF6D;
+@donation-amt-input-bg: #ADCAC9;
+@donation-amt-fg: #3E4050;
+@donation-number-fg: #DF9232;
+@donation-button-bg: #0FA55E;
+
+@charity-page-greybg: #E4E7EB;
+@charity-page-greyline: #C8CBD1;
