--- a/web/style/SearchPage.css
+++ b/web/style/SearchPage.css
@@ -10,19 +10,23 @@
   margin-top: 50px;
 }
 .num-results {
-  border-bottom: 1px solid #a49f79;
+  border-bottom: 1px solid #A49F79;
   font-size: 1em;
   margin-bottom: 2vh;
 }
 .unready-results {
   margin-top: 10em;
   margin-bottom: 5em;
-  border-bottom: 1px dashed #f04b47;
+  border-bottom: 1px dashed #F04B47;
 }
 .SearchResult {
   padding-top: 2vh;
   padding-bottom: 2vh;
-  border-bottom: 1px solid #f04b47;
+  border-bottom: 1px solid #F04B47;
+}
+.SearchResult .charity-logo {
+  height: 64px;
+  width: auto;
 }
 .FeaturedSidebar.affix-top {
   position: static;
@@ -32,18 +36,14 @@
   position: fixed;
   top: 4vh;
 }
-.charity-logo {
-  height: 64px;
-  width: auto;
-}
 .featured-charities-header {
   font-size: 1em;
   color: #262741;
-  border-bottom: 2px solid #f04b47;
+  border-bottom: 2px solid #F04B47;
 }
 .btn-showall {
-  background-color: #a49f79;
-  color: #ffffff;
+  background-color: #A49F79;
+  color: #FFFFFF;
 }
 .sogive-search {
   width: 100% !important;
@@ -57,4 +57,10 @@
   outline: 0;
   height: 8vh !important;
   font-size: 150% !important;
+}
+.field-clear-button {
+  position: absolute;
+  right: 60px;
+  z-index: 10;
+  font-size: 150%;
 }
