--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -74,17 +74,21 @@
 					line-height: 32px;
 				}
 
-				&.why-tags {
-					border-left: 15px solid @why-tags;
+				&.why-tags {					
 					span {
+						border-left: 15px solid @why-tags;
 						background-color: @why-tags-fade;
 					}
 				}
-				&.where-tags {
-					border-left: 15px solid @where-tags;
+				&.where-tags {					
 					span {
+						border-left: 15px solid @where-tags;
 						background-color: @where-tags-fade;
 					}
+				}
+
+				a {
+					color: inherit;
 				}
 
 			}
