--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -31,3 +31,6 @@
 
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
+
+.color-facebook {color: #3b5998;}
+.color-twitter {color:#4099ff;}
