--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -189,7 +189,8 @@
 			img {
 				width: 100%;
 				max-height: 500px;
-				object-fit: cover;
+				min-height: 50px;
+				object-fit: contain;
 			}
 		}
 
