--- a/web/style/main.less
+++ b/web/style/main.less
@@ -12,7 +12,7 @@
 }
 
 .avoid-navbar {
-    margin-top: @navbar-height;
+    margin-top: @navbar-height + 1;
 }
 
 .navbar-brand, .navbar-nav li a {
