--- a/web/style/main.less
+++ b/web/style/main.less
@@ -69,6 +69,7 @@ img.logo-large {
 @import "SearchPage.less";
 @import "CharityPage.less";
 @import "Donation.less";
+@import "SocialShare.less";
 @import "footer.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
