--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -109,6 +109,19 @@
 			line-height: @band-2-height;
 		}
 
+		.nav-tabs li {
+			background-color:white;
+		}
+		.nav-tabs li.active {
+			background-color: @charity-page-greybg;
+		}
+
+		
+		h2, h3 {
+			border-bottom: 1px solid white;
+		}
+
+
 		.charity-about {
 			.images {
 				position: relative;
@@ -169,6 +182,8 @@
 		}
 
 		.charity-extra {
+			background-color: @charity-page-greybg;
+			
 			.extra-project {
 				img.project-image {
 					width: 100%;
@@ -179,8 +194,8 @@
 					}
 				}
 			}
-		}
-	}
+		} // ./charity-extra
+	} // ./info-column
 
 
 	.donation-impact {
