--- a/web/style/SocialShare.less
+++ b/web/style/SocialShare.less
@@ -3,15 +3,21 @@
 
 .share-social-buttons {
 	float: right;
+	z-index: 9; /* Tuck under the donation-impact div */
+	height: 75px; /* Make room for the "pop down on hover" effect */
 	a {
+		/* Space them out and tuck them up under the column bottom */
+		margin: -10px 5px 5px 5px;
 		display: inline-block;
-		font-size: 60px;
+		font-size: 40px;
+		line-height: 60px;
 		width: 60px;
 		height: 60px;
 		border: none;
 		border-radius: 50%;
 		padding: 0;
 		color: white;
+		text-align: center;
 		cursor: pointer;
 		&.share-social-facebook {
 			background-color: royalblue;
@@ -22,5 +28,9 @@
 		&.share-social-email {
 			background-color: @donation-amt-bg;
 		}
+		&:hover {
+			transform: translateY(15px);
+		}
+		transition: transform 0.25s ease;
 	}
 }
