--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -24,7 +24,7 @@
 @where-tags-fade: #E6D49D;
 
 @donation-amt-bg: #FBCF6D;
-@donation-amt-input-bg: #ADCAC9;
+@donation-amt-input-bg: #FDE8BA;
 @donation-amt-fg: #3E4050;
 @donation-number-fg: #DF9232;
 @donation-button-bg: #0FA55E;
