--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -103,6 +103,8 @@
 .field-clear-button {
 	position: absolute;
 	right: 60px;
+	top: 14px;
+	color: grey;
 	z-index: 10;
-	font-size: 150%;
+	font-size: 2em;
 }
