--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -1,7 +1,13 @@
 @import "colours.less";
 
 .SearchResults {
-    margin-top: 50px;
+		margin-top: 50px;
+		background: #f2f2f2;
+		padding: 2em;
+		.results-list {
+			background-color: #dcdcdc;
+			padding: 2em;
+		}
 }
 
 .num-results {
@@ -17,13 +23,90 @@
 }
 
 .SearchResult {
-	padding-top: 2vh;
-	padding-bottom: 2vh;
-	border-bottom: 1px solid @colour-01;
+	position: relative;
+	// Make columns full-height
+	display: flex;
+	// Override Bootstrap negative margins on rows
+	margin-left: 0;
+	margin-right: 0;
+	margin-bottom: 2em;
+	background-color: white;
+	box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.1);
+	/* Extra space for the "recommended" tab */
+	&.recommended {
+		margin-top: 3em;
+	}
 	
-	.charity-logo {
-		height: 64px;
-		width: auto;
+	.recommended-tab {
+		position: absolute;
+		bottom: 100%;
+		z-index: 10;
+		padding: 0.25em 2em;
+		color: #81bee8;
+		font-size: 120%;
+		&:before {
+			content: '';
+			position: absolute;
+			transform: perspective(150px) rotateX(30deg);
+			transform-origin: bottom left;
+			z-index: -2;
+			background: white;
+			top: -5px;
+			right: 0;
+			bottom: -1px;
+			left: 0;
+		}
+	}
+
+	a, a:hover {
+		color: #262741;
+		text-decoration: none;
+	}
+	
+	.logo {
+		display: flex;
+		align-items: center;
+		text-align: center;
+
+		.charity-logo {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
+		.charity-logo-placeholder {
+			font-size: 175%;
+		}
+	}
+	.text-summary {
+		background-color: #e5e5e5;
+		.name {
+			color: #df9232;
+			margin-right: 0.3em;
+		}
+		.description, .description:hover {
+			color: #262741
+		}
+	}
+	.amount {
+
+	}
+	.impact {
+		.impact-summary {
+			h3, .impact-count {
+				color: #df9232;
+				font-size: 120%;
+			}
+			h3 {
+				text-decoration: underline;
+			}
+			border-bottom: 1px solid #df9232;
+		}
+		.impact-detail {
+
+		}
+		.read-more {
+
+		}
 	}
 }
 
@@ -38,7 +121,13 @@
 }
 
 .SearchForm {
-	margin-top: 20px;
+	background: linear-gradient(to right, #f9ce6e, #dd912f);
+	height: 10em;
+	box-shadow: 0px 5px 10px 0px rgba(221,145,47, 0.5);
+	padding: 50px;
+	form {
+
+	}
 }
 
 
@@ -65,38 +154,11 @@
 	width: 100% !important;
 }
 
-// .clear-search {
-// 	background-color: transparent;
-// 	color: grey;
-// 	border-radius: none;
-// 	border-color: transparent;
-// }
-
-// .clear-search-btn {
-// 	background-color: transparent;
-// 	color: grey;
-// 	border-radius: 0px;
-// 	border-color: transparent;
-// 	border-bottom: 1px solid @colour-03;
-// 	height: 8vh;
-// 	&:hover, &:active, &:focus, &:visited {
-// 		background-color: transparent;
-// 		color: grey;
-// 		border-radius: 0px;
-// 		border-color: transparent;
-// 		border-bottom: 1px solid @colour-03;
-// 		height: 8vh;
-// 	}
-// }
-
 .sogive-search-box {
-	border-top: none;
-	border-left: none;
-	border-right: none;
-	border-bottom: 1px solid @colour-03;
+	border: none;
 	border-radius: 0px !important;
 	outline: 0;
-	height: 8vh !important;
+	height: 2.5em !important;
 	font-size: 150% !important;
 }
 
