Account menu no longer looks weird

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -21,6 +21,12 @@
     text-transform: lowercase;
 }
 
+/* Override the above so the account/logout menu looks normal */
+.dropdown-menu li a {
+	line-height: initial !important;
+	height: auto !important;
+}
+
 #navbar {
 	background-color: @colour-03;
 	font-size: 1.5em;
