--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -1,19 +1,39 @@
 @import "colours.less";
 
 .SearchResults {
+		position: relative;
 		margin-top: 50px;
 		background: #f2f2f2;
 		padding: 2em;
+
 		.results-list {
 			background-color: #dcdcdc;
 			padding: 2em;
 		}
+
+		.top-tab {
+			position: absolute;
+			bottom: 100%;
+			left: 0;
+			font-size: 150%;
+			padding-left: 1.25em;
+			&:before {
+				content: '';
+				position: absolute;
+				transform: perspective(150px) rotateX(30deg);
+				transform-origin: bottom left;
+				z-index: -2;
+				background: #f2f2f2;
+				top: -50%; // font-independent: make the element tall enough to still contain the text after rotation
+				right: -2em; // Push the right edge ~2 characters away from the text
+				bottom: -1px; // Sometimes the rotation leaves a seam
+				left: 0;
+			}
+		}
 }
 
 .num-results {
-	border-bottom: 1px solid @colour-02;
-	font-size: 1em;
-	margin-bottom: 2vh;
+
 }
 
 .unready-results {
@@ -56,6 +76,12 @@
 			bottom: -1px;
 			left: 0;
 		}
+		.recommended-icon {
+			height: 1em;
+			position: absolute;
+			left: 0.5em;
+			bottom: 0.5em;
+		}
 	}
 
 	a, a:hover {
@@ -87,15 +113,20 @@
 			color: #262741
 		}
 	}
-	.amount {
+	.amount-picker {
 		display: flex;
     flex-direction: column;
-    justify-content: center;
+		justify-content: center;
+		align-items: center;
 		font-size: 200%;
 		.money {
 			.amount {
 				color: #df9232;
 			}
+		}
+		.change-donation-amount {
+			width: 1em;
+			height: 1em;
 		}
 	}
 	.impact {
@@ -121,6 +152,11 @@
 			font-size: 120%;
 			background-color: #eec694;
 			padding: 0.25em 7em 0.25em 0.5em;
+			.read-more-caret {
+				width: 1em;
+				position: absolute;
+				right: 0.5em
+			}
 		}
 	}
 }
@@ -140,12 +176,31 @@
 	height: 10em;
 	box-shadow: 0px 5px 10px 0px rgba(221,145,47, 0.5);
 	padding: 50px;
-	form {
-
-	}
 }
 
-
+.search-pager {
+	text-align: center;
+	.pager-button {
+		width: 2em;
+		height: 2em;
+		background-color: #292a33;
+		display: inline-block;
+		margin-right: 0.25em;
+		border-radius: 0.25em;
+		color: white;
+		font-size: 125%;
+		text-align: center;
+		line-height: 2em;
+		font-weight: bold;
+		cursor: pointer;
+	
+		&.current-page {
+			background-color: white;
+			color: #292a33;
+			cursor: normal;
+		}
+	}
+}
 
 
 .featured-charities-header {
