--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -118,7 +118,7 @@
     flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		font-size: 200%;
+		font-size: 175%;
 		.money {
 			.amount {
 				color: #df9232;
@@ -145,9 +145,11 @@
 
 		}
 		.read-more {
-			position: absolute;
+			float: right;
+			position: relative;
 			bottom: 0.5em;
 			right: 0.5em;
+			margin-top: 0.5em;
 			text-transform: lowercase;
 			font-size: 120%;
 			background-color: #eec694;
