Search page: shrink long donation amounts + charity names (when used as placeholder for missing logo)

--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -92,6 +92,7 @@
 	.logo {
 		display: flex;
 		align-items: center;
+		justify-content: center;
 		text-align: center;
 
 		.charity-logo {
@@ -101,6 +102,9 @@
 		}
 		.charity-logo-placeholder {
 			font-size: 175%;
+			&.long-name {
+				font-size: 150%;
+			}
 		}
 	}
 	.text-summary {
@@ -119,6 +123,9 @@
 		justify-content: center;
 		align-items: center;
 		font-size: 175%;
+		&.long-amount {
+			font-size: 150%;
+		}
 		.money {
 			.amount {
 				color: #df9232;
