--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -37,8 +37,7 @@
 }
 
 .unready-results {
-	margin-top: 10em;
-	margin-bottom: 5em;
+	margin: 1em;
 	border-bottom: 1px dashed @colour-01;
 }
 
@@ -109,6 +108,7 @@
 	}
 	.text-summary {
 		background-color: #e5e5e5;
+		padding: 0.5em;
 		.name {
 			color: #df9232;
 			margin-right: 0.3em;
@@ -123,8 +123,8 @@
 		justify-content: center;
 		align-items: center;
 		font-size: 175%;
-		&.long-amount {
-			font-size: 150%;
+		&.long-amount .money {
+			font-size: 80%;
 		}
 		.money {
 			.amount {
@@ -248,4 +248,31 @@
 	color: grey;
 	z-index: 10;
 	font-size: 2em;
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+	.SearchResults {
+		margin-left: -2em;
+		margin-right: 1em;
+		padding: 0em;
+
+		.num-results {
+			margin-left: 2em;
+		}
+
+		.results-list {
+			padding: 1em;
+		}
+
+		.SearchResult {
+			.charity-logo-placeholder {
+				font-size: 100%;
+				&.long-name {
+					font-size: 100%;
+				}
+			}
+		}
+	}
+
 }
