Search page: search box looks better mobile

--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -244,7 +244,7 @@
 .field-clear-button {
 	position: absolute;
 	right: 60px;
-	top: 14px;
+	top: 10px;
 	color: grey;
 	z-index: 10;
 	font-size: 2em;
@@ -252,6 +252,11 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+	.SearchForm {
+		margin-left: -2em;
+		margin-right: 1em;
+		padding: 1em;
+	}
 	.SearchResults {
 		margin-left: -2em;
 		margin-right: 1em;
