--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -19,6 +19,7 @@
 @navbarcolour: @SogiveBrandYellow;
 
 @why-tags: #DF9232;
+@bold-text-colour: #DF9232;
 @why-tags-fade: #D2B387;
 @where-tags: #FACD6B;
 @where-tags-fade: #E6D49D;
