Donation form is now a button which pops out to a lightbox

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -76,6 +76,7 @@ img.logo-large {
 @import "SearchPage.less";
 @import "CharityPage.less";
 @import "Donation.less";
+@import "NewDonationForm.less";
 @import "SocialShare.less";
 @import "footer.less";
 
