Fundraiser Page implementation of Isabel's design: structure in place, ready for styling + data

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -77,6 +77,7 @@ img.logo-large {
 @import "CharityPage.less";
 @import "Donation.less";
 @import "NewDonationForm.less";
+@import "FundRaiserPage.less";
 @import "SocialShare.less";
 @import "footer.less";
 
