FundRaiserPage: all elements in place, lots of styling done.

--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -35,3 +35,9 @@
 
 .color-facebook {color: #3b5998;}
 .color-twitter {color:#4099ff;}
+
+
+
+
+@progress-bar-done: #81BEE8;
+@donation-date: #C8CBD1;
