FundRaiserPage: some visual tweaks.

--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -1,10 +1,23 @@
 @import "positioning.less";
 @import "colours.less";
 
-#FundRaiserPage {
-	.event-banner {
-		.extend-content-to-sides(@bs-column-padding);
+#fundraiser-bg {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-image: url(/img/kiltwalk/KW_aberdeen_supporter_background.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	z-index: -1
+}
 
+#FundRaiserPage {
+	background: white;
+
+	.event-banner {
+		padding: 0 0;
 		img {
 			width: 100%;
 		}
