donation refactor - more crud

--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -31,7 +31,7 @@
 	}
 
 	.vitals {
-		/* ??Hard-coded height was causing odd layout. Can we do height using flex layout instead, so it works nicely on any screen size?? ^Dan */
+		/* ??Hard-coded height was causing odd layout. min-height fixes that. Minor thought: Can we do height using flex layout instead, so it works nicely on any screen size?? ^Dan */
 		min-height: 350px;
 		background: linear-gradient(to bottom, #3f4151 0% , #3f4151 50%, white 50%, white 100%);
 
