--- a/web/style/main.less
+++ b/web/style/main.less
@@ -79,6 +79,7 @@ img.logo-large {
 @import "NewDonationForm.less";
 @import "WizardProgressWidget.less";
 @import "FundRaiserPage.less";
+@import "RegisterPage.less";
 @import "SocialShare.less";
 @import "footer.less";
 
