--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -153,24 +153,24 @@
 		.impact-detail {
 
 		}
-		.read-more {
-			float: right;
-			position: relative;
-			bottom: 0.5em;
-			right: 0.5em;
-			margin-top: 0.5em;
-			text-transform: lowercase;
-			font-size: 120%;
-			background-color: #eec694;
-			padding: 0.25em 7em 0.25em 0.5em;
-			.read-more-caret {
-				width: 1em;
-				position: absolute;
-				right: 0.5em
-			}
+	} // ./impact
+	.read-more {
+		float: right;
+		position: relative;
+		bottom: 0.5em;
+		right: 0.5em;
+		margin-top: 0.5em;
+		text-transform: lowercase;
+		font-size: 120%;
+		background-color: #eec694;
+		padding: 0.25em 7em 0.25em 0.5em;
+		.read-more-caret {
+			width: 1em;
+			position: absolute;
+			right: 0.5em
 		}
-	}
-}
+	} // ./read-more
+} // ./SearchResult
 
 .FeaturedSidebar.affix-top {
 	position: static;
