--- a/web/style/main.less
+++ b/web/style/main.less
@@ -1,6 +1,7 @@
 // Styling for the SoGive app
 @import "colours.less";
 @import "positioning.less";
+@import "buttons.less";
 
 @font-face {
 	font-family: 'Roboto';
